# medical_customer_support_agent

./: .gitignore  README.md  commands_used.txt  ollama_commands.txt  requirements.txt
medical_claim_processing/: .gitignore
medical_claim_processing/diagrams/: preauth_provider_flow.md
medical_claim_processing/preauth_insurer_side/: README.md  commands_used.txt  pyproject.toml  requirements.txt
medical_claim_processing/preauth_insurer_side/notebooks/: 2.preauth_insurer_agents.ipynb
medical_claim_processing/preauth_insurer_side/src/preauth_insurer_side/: main.py  result.txt
medical_claim_processing/preauth_insurer_side/src/preauth_insurer_side/crews/preauth_insurer_crew/: preauth_insurer_crew.py
medical_claim_processing/preauth_insurer_side/src/preauth_insurer_side/crews/preauth_insurer_crew/config/: agents.yaml  tasks.yaml
medical_claim_processing/preauth_insurer_side/src/preauth_insurer_side/tools/: custom_tool.py  tools.py
medical_claim_processing/preauth_insurer_side_crew/: README.md  pyproject.toml
medical_claim_processing/preauth_insurer_side_crew/src/preauth_insurer_side_crew/: crew.py  main.py
medical_claim_processing/preauth_insurer_side_crew/src/preauth_insurer_side_crew/config/: agents.yaml  tasks.yaml
medical_claim_processing/preauth_insurer_side_crew/src/preauth_insurer_side_crew/tools/: custom_tool.py
medical_claim_processing/preauth_provider_side_crew/: README.md  pyproject.toml
medical_claim_processing/preauth_provider_side_crew/notebooks/: 1.preauth_provider_agents.ipynb  1.preauth_provider_agents_complete.ipynb  crew_run.ipynb  (+1 more)
(+6 files in other folders)
