[project]
name = "preauth_insurer_side_crew"
version = "0.1.0"
description = "preauth_insurer_side_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
preauth_insurer_side_crew = "preauth_insurer_side_crew.main:run"
run_crew = "preauth_insurer_side_crew.main:run"
train = "preauth_insurer_side_crew.main:train"
replay = "preauth_insurer_side_crew.main:replay"
test = "preauth_insurer_side_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
